@@ -45,7 +45,7 @@ enum class SortingMode {
   // relevant tables are sorted by timestamp.
   //
   // This is the default mode.
-  kDefaultHeureustics = 0,
+  kDefaultHeuristics = 0,
 
   // This option forces trace processor to wait for all trace packets to be
   // passed to it before doing a full sort of all the packets. This causes any
@@ -60,7 +60,7 @@ enum class SortingMode {
   // not be relied upon.
   //
   // If a |flush_period_ms| is not specified in the TraceConfig, this mode will
-  // act the same as |SortingMode::kDefaultHeureustics|.
+  // act the same as |SortingMode::kDefaultHeuristics|.
   kForceFlushPeriodWindowedSort = 2
 };
 
@@ -88,16 +88,9 @@ enum class DropFtraceDataBefore {
 
 // Struct for configuring a TraceProcessor instance (see trace_processor.h).
 struct PERFETTO_EXPORT Config {
-  // When set to true, this option forces trace processor to perform a full
-  // sort ignoring any internal heuristics to skip sorting parts of the data.
-  // This option was deprecated in v13 and replaced by
-  // setting |sorting_mode| to |SortingMode::kForceFullSort|
-  // This is option is scheduled to be removed in v14.
-  bool force_full_sort = false;
-
   // Indicates the sortinng mode that trace processor should use on the passed
   // trace packets. See the enum documentation for more details.
-  SortingMode sorting_mode = SortingMode::kDefaultHeureustics;
+  SortingMode sorting_mode = SortingMode::kDefaultHeuristics;
 
   // When set to false, this option makes the trace processor not include ftrace
   // events in the raw table; this makes converting events back to the systrace
